--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>Proficiency in HTML5, CSS3, React, Node, Express, MongoDB, Django, Python. <br>
               Web development is the work involved in
                developing a website for the Internet (World Wide Web) or an intranet (a private network). Web development can range from developing a simple single static page of plain text to complex web applications,
-               electronic businesses, and social network services..
+               electronic businesses, and social network services...
             </p>
               
           </div>
